Minor fix for Unix kadai

--- a/site/unix/kadai2/index.html
+++ b/site/unix/kadai2/index.html
@@ -781,7 +781,7 @@
 <p><code>sudo chgrp</code> で <code>testdir</code> の所有グループを <code>codespace</code> に変更するコマンドを答えよ．（参照： 8.1.2）</p>
 </li>
 <li>
-<p><code>testdir</code> は所有者のみが書き込みできる状態である．これを読み込み専用にするコマンドを答えよ．（参照： 8.2.2）</p>
+<p><code>testdir</code> は所有者のみが書き込みできる状態である．これを所有者が書き込みできない（読み込み専用）にするコマンドを答えよ．（参照： 8.2.2）</p>
 </li>
 <li>
 <p><code>unix/hello.sh</code> はシェルスクリプト（第9章参照）であり，デフォルトでは <code>bash unix/hello.sh</code> のように <code>bash</code> コマンドに対して引数として与えることで実行することができる．このファイルを直接 <code>unix/hello.sh</code> のように（ <code>bash</code> なしで）実行できるように実行権限を付与するコマンドを答えよ．（参照： 8.2.2）</p>
